update the deprecated method