@@ -27,6 +27,7 @@ package org.aoju.bus.cache.support;
 
 import org.aoju.bus.core.toolkit.CollKit;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -49,25 +50,26 @@ public class Addables {
 
     public static Collection newCollection(Class<?> type, Collection initCollection) {
         try {
-            Collection collection = (Collection) type.newInstance();
+            Collection collection = (Collection) type.getConstructor().newInstance();
             if (CollKit.isNotEmpty(initCollection)) {
                 collection.addAll(initCollection);
             }
-
             return collection;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
             throw new RuntimeException("could not invoke collection: " + type.getName() + "'s no param (default) constructor!", e);
         }
     }
 
     public static Map newMap(Class<?> type, Map initMap) {
         try {
-            Map map = (Map) type.newInstance();
+            Map map = (Map) type.getConstructor().newInstance();
             if (CollKit.isNotEmpty(initMap)) {
                 map.putAll(initMap);
             }
             return map;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
             throw new RuntimeException("could not invoke map: " + type.getName() + "'s no param (default) constructor!", e);
         }
     }
@@ -113,8 +115,9 @@ public class Addables {
         @Override
         public Addable init(Class<Collection> type, int initSize) {
             try {
-                this.instance = type.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                this.instance = type.getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
+                     NoSuchMethodException e) {
                 throw new RuntimeException("could not invoke collection: " + type.getName() + "'s no param (default) constructor!", e);
             }
 
@@ -140,8 +143,9 @@ public class Addables {
         @Override
         public Addable init(Class<Map> type, int initSize) {
             try {
-                this.instance = type.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                this.instance = type.getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                     InvocationTargetException e) {
                 throw new RuntimeException("could not invoke Map: " + type.getName() + "'s no param (default) constructor!", e);
             }
 
