@@ -43,6 +43,7 @@ import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.ResolvableType;
 import org.springframework.stereotype.Component;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.util.Arrays;
 import java.util.Map;
@@ -215,10 +216,10 @@ public class SpringBuilder implements ApplicationContextAware {
      */
     public static void registerSingleton(Class clazz) {
         try {
-            registerSingleton(clazz, clazz.newInstance());
+            registerSingleton(clazz, clazz.getConstructor().newInstance());
         } catch (InstantiationException e) {
             Logger.error(e.getMessage(), e);
-        } catch (IllegalAccessException e) {
+        } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             Logger.error(e.getMessage(), e);
         }
     }
